force-app/main/default/objects/public_xm_relation__x/public_xm_relation__x.object-meta.xml
<CustomObject>
    <description>public$xm_relation</description>
    <externalDataSource>Heroku_Postgres</externalDataSource>
    <externalName>public$xm_relation</externalName>
    <label>public$xm_relation</label>
    <pluralLabel>public$xm_relation</pluralLabel>
</CustomObject>