force-app/main/default/objects/public_xm_relation__x/fields/relation_id__c.field-meta.xml
<CustomField>
    <fullName>relation_id__c</fullName>
    <description>relation_id</description>
    <externalDeveloperName>relation_id</externalDeveloperName>
    <label>relation_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>