force-app/main/default/objects/public_xm_relation__x/fields/user_one_id__c.field-meta.xml
<CustomField>
    <fullName>user_one_id__c</fullName>
    <description>user_one_id</description>
    <externalDeveloperName>user_one_id</externalDeveloperName>
    <label>user_one_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>