force-app/main/default/objects/public_xm_relation__x/fields/user_two_id__c.field-meta.xml
<CustomField>
    <fullName>user_two_id__c</fullName>
    <description>user_two_id</description>
    <externalDeveloperName>user_two_id</externalDeveloperName>
    <label>user_two_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>